test/valid_samples/shortops.mc
void main() {
    int a;
    a += 10;
    a -= 10;
    a /= 10;
    a *= 10;
    a = a % 10;
    a %= 10;
}