test/semantic_errors/invalid_declaration4.mc
void main() {
    int a[10];
    int *b = a; /* assignment of int to a bool */
}